@@ -8,13 +8,17 @@
 <body lang="en">
 <h1>jGallery<br>
 </h1>
-<p>jGallery is a web application to display image galleries. Contrary
+<p>jGallery is a web application to present image galleries. Contrary
 to <a href="http://www.datadosen.se/jalbum/">JAlbum</a>, which
 generates HTML pages offline, <a href="http://jgallery.dev.java.net/">jGallery</a>
 creates HTML pages at
 request time. <br>
 </p>
-<p>Get jGallery at <a href="http://jgallery.dev.java.net/">http://jgallery.dev.java.net/</a>.</p>
+<p>Get jGallery at <a href="http://jgallery.dev.java.net/">http://jgallery.dev.java.net/</a><br>
+</p>
+<p>and <a href="http://www.webersoft.de:8080/jGallery/demo/index.html">view
+the online demo</a>.<br>
+</p>
 <p>jGallery uses templates (skins) to define the generated
 pages. jGallery's templates are to a high degree compatible with
 JAlbum's skins. Get them at <a href="http://jrepository.engblom.org/">http://jrepository.engblom.org/</a>.<br>
@@ -95,8 +99,6 @@ application. Try the Tomcat manager application, to see if jGallery is
 in the list of web applications.</li>
   <li>you get HTTP Status 404: check if your URL has the right text
 case of the folder path</li>
-  <li><br>
-  </li>
 </ul>
 <br>
 <h3><a name="RecommendedSetup">Recommended setup</a></h3>
@@ -362,10 +364,8 @@ skins and variables and <a
 me to include <a href="http://www.datadosen.se/jalbum/">JAlbum</a>'s
 Standard skin.<br>
   </li>
-  <li><a href="http://www.mje.de/">Matze</a> for discussing concepts of
+  <li>Matze and Carsten for testing and discussing concepts of
 jGallery</li>
-  <li>Carsten for testing<br>
-  </li>
   <li>and the creators of <a href="http://java.sun.com/">Java</a>, <a
  href="http://jakarta.apache.org/">Tomcat</a> and <a
  href="http://www.eclipse.org/">Eclipse</a>.<br>
